--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -69,4 +69,6 @@
     <dimen name="width_pgp_message_type_line">8dp</dimen>
     <dimen name="width_pgp_message_type_line_inverse">-9dp</dimen>
     <dimen name="height_webview_dialog">480dp</dimen>
+    <dimen name="layout_height_message_item">72dp</dimen>
+    <dimen name="gone_margin_right_attachment_icon">34dp</dimen>
 </resources>
