Fixed showing the action buttons.| #202

--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -142,7 +142,8 @@
                         android:id="@+id/layoutReplyButtons"
                         layout="@layout/reply_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible" />
 
                 </LinearLayout>
 
