Added a help icon to the password hint in CheckKeysActivity.| Close #193

--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="default_margin_content_big">32dp</dimen>
     <dimen name="default_single_dip">1dp</dimen>
     <dimen name="default_twice_dip">2dp</dimen>
+    <dimen name="default_four_dip">4dp</dimen>
     <dimen name="default_twice_dip_inverse">-2dp</dimen>
 
     <dimen name="default_button_height">64dp</dimen>
@@ -72,4 +73,5 @@
     <dimen name="layout_height_message_item">72dp</dimen>
     <dimen name="gone_margin_right_attachment_icon">34dp</dimen>
     <dimen name="layout_height_action_button">72dp</dimen>
+    <dimen name="size_small_image_button">24dp</dimen>
 </resources>
