--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -80,15 +80,47 @@
             app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
             app:layout_constraintTop_toBottomOf="@+id/layoutSubTitle" />
 
+        <LinearLayout
+            android:id="@+id/layoutPasswordHint"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top_key_password"
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/default_four_dip"
+            android:paddingStart="@dimen/default_four_dip"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+            app:layout_constraintTop_toBottomOf="@+id/layoutSubTitle">
+
+            <TextView
+                style="@style/TextAppearance.Design.Hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/enter_your_pass_phrase" />
+
+            <ImageButton
+                android:id="@+id/imageButtonPasswordHint"
+                android:layout_width="@dimen/size_small_image_button"
+                android:layout_height="@dimen/size_small_image_button"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/default_margin_small"
+                android:background="?selectableItemBackgroundBorderless"
+                android:contentDescription="@string/see_choosing_secure_pass_phrases"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_help_grey" />
+        </LinearLayout>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutKeyPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top_key_password"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:counterEnabled="false"
+            app:errorEnabled="false"
+            app:hintEnabled="false"
             app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
             app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/layoutSubTitle"
+            app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
             app:passwordToggleContentDescription="description"
             app:passwordToggleEnabled="true">
 
@@ -97,9 +129,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/enter_your_pass_phrase"
                 android:inputType="textPassword" />
-
         </android.support.design.widget.TextInputLayout>
 
         <Button
