--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -131,6 +131,12 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <com.flowcrypt.email.ui.widget.EmailWebView
+                android:id="@+id/emailWebView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
             <LinearLayout
                 android:id="@+id/layoutAttachments"
                 android:layout_width="match_parent"
