--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -74,4 +74,7 @@
     <dimen name="gone_margin_right_attachment_icon">34dp</dimen>
     <dimen name="layout_height_action_button">72dp</dimen>
     <dimen name="size_small_image_button">24dp</dimen>
+    <dimen name="drop_down_vertical_offset_spinner_from">56dp</dimen>
+    <dimen name="drop_down_size">32dp</dimen>
+    <dimen name="padding_recipients_to">48dp</dimen>
 </resources>
