Disabled an easy access to copy/paste functions on the "from" field.| #202

--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -60,6 +60,7 @@
                         android:focusableInTouchMode="false"
                         android:hint="@string/from"
                         android:inputType="none"
+                        android:longClickable="false"
                         android:paddingEnd="@dimen/drop_down_size"
                         android:paddingTop="@dimen/default_margin_medium" />
 
