Fixed UI in reply_layout.xml| Close #202

--- a/FlowCrypt/src/main/res/layout/reply_layout.xml
+++ b/FlowCrypt/src/main/res/layout/reply_layout.xml
@@ -35,6 +35,7 @@
             android:id="@+id/textViewReply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/reply_encrypted"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +72,7 @@
             android:id="@+id/textViewReplyAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/reply_all_encrypted"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +107,7 @@
             android:id="@+id/textViewForward"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/forward_encrypted"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
