--- a/FlowCrypt/src/main/res/layout/fragment_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_create_message.xml
@@ -49,7 +49,8 @@
                 <android.support.design.widget.TextInputLayout
                     style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/from">
 
                     <EditText
                         android:id="@+id/editTextFrom"
@@ -58,7 +59,6 @@
                         android:background="@android:color/transparent"
                         android:focusable="false"
                         android:focusableInTouchMode="false"
-                        android:hint="@string/from"
                         android:inputType="none"
                         android:longClickable="false"
                         android:paddingEnd="@dimen/drop_down_size"
@@ -84,6 +84,7 @@
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/AppWidget.TextInputLayout.GreyBottomLine"
+                    android:hint="@string/prompt_recipients_to"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -93,7 +94,6 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:completionThreshold="2"
-                        android:hint="@string/prompt_recipients_to"
                         android:paddingEnd="@dimen/padding_recipients_to"
                         android:paddingTop="@dimen/default_margin_small"
                         android:shrinkColumns="0, true">
@@ -138,6 +138,7 @@
                 <android.support.design.widget.TextInputLayout
                     style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                     android:layout_width="match_parent"
+                    android:hint="@string/prompt_recipients_cc"
                     android:layout_height="wrap_content">
 
                     <com.flowcrypt.email.ui.widget.PgpContactsNachoTextView
@@ -146,7 +147,6 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:completionThreshold="2"
-                        android:hint="@string/prompt_recipients_cc"
                         android:paddingEnd="@dimen/size_of_small_progressbar"
                         android:paddingTop="@dimen/default_margin_small"
                         android:shrinkColumns="0, true" />
@@ -172,6 +172,7 @@
                 <android.support.design.widget.TextInputLayout
                     style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                     android:layout_width="match_parent"
+                    android:hint="@string/prompt_recipients_bcc"
                     android:layout_height="wrap_content">
 
                     <com.flowcrypt.email.ui.widget.PgpContactsNachoTextView
@@ -180,7 +181,6 @@
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
                         android:completionThreshold="2"
-                        android:hint="@string/prompt_recipients_bcc"
                         android:paddingEnd="@dimen/size_of_small_progressbar"
                         android:paddingTop="@dimen/default_margin_small"
                         android:shrinkColumns="0, true" />
@@ -199,6 +199,7 @@
 
             <android.support.design.widget.TextInputLayout
                 style="@style/AppWidget.TextInputLayout.GreyBottomLine"
+                android:hint="@string/prompt_subject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -207,7 +208,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:hint="@string/prompt_subject"
                     android:inputType="textEmailSubject|textCapSentences|textAutoCorrect"
                     android:maxLines="1"
                     android:paddingTop="@dimen/default_margin_content" />
@@ -218,6 +218,7 @@
                 android:id="@+id/textInputLayoutEmailMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/prompt_compose_security_email"
                 android:background="@drawable/bg_bottom_line_transparent">
 
                 <android.support.design.widget.TextInputEditText
@@ -225,7 +226,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:hint="@string/prompt_compose_security_email"
                     android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                     android:paddingTop="@dimen/default_margin_small" />
 
