Fixed applying of selectableItemBackgroundBorderless/selectableItemBackground attribute.

--- a/FlowCrypt/src/main/res/layout/activity_create_private_key.xml
+++ b/FlowCrypt/src/main/res/layout/activity_create_private_key.xml
@@ -91,7 +91,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:background="?selectableItemBackgroundBorderless"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
                         android:contentDescription="@string/see_choosing_secure_pass_phrases"
                         android:padding="@dimen/default_margin_content_small"
                         app:srcCompat="@mipmap/ic_help_grey" />
