--- a/FlowCrypt/src/main/res/layout/reply_layout.xml
+++ b/FlowCrypt/src/main/res/layout/reply_layout.xml
@@ -12,7 +12,7 @@
         android:id="@+id/layoutReplyButton"
         android:layout_width="0dp"
         android:layout_height="@dimen/layout_height_action_button"
-        android:background="?selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toStartOf="@+id/layoutReplyAllButton"
@@ -47,7 +47,7 @@
         android:id="@+id/layoutReplyAllButton"
         android:layout_width="0dp"
         android:layout_height="@dimen/layout_height_action_button"
-        android:background="?selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toStartOf="@+id/layoutForwardButton"
@@ -84,7 +84,7 @@
         android:id="@+id/layoutForwardButton"
         android:layout_width="0dp"
         android:layout_height="@dimen/layout_height_action_button"
-        android:background="?selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
