--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -57,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:background="?selectableItemBackgroundBorderless"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/see_choosing_secure_pass_phrases"
                     app:srcCompat="@mipmap/ic_help_grey" />
 
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:background="?selectableItemBackgroundBorderless"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/see_choosing_secure_pass_phrases"
                 app:srcCompat="@mipmap/ic_help_grey" />
         </LinearLayout>
