--- a/FlowCrypt/src/main/res/layout/toolbar.xml
+++ b/FlowCrypt/src/main/res/layout/toolbar.xml
@@ -9,13 +9,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
-    android:background="?attr/colorPrimary"
+    android:background="?android:attr/colorPrimary"
     android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="?android:attr/actionBarSize"
         app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
 
 </android.support.design.widget.AppBarLayout>
