--- a/FlowCrypt/src/main/res/layout/activity_contacts_settings.xml
+++ b/FlowCrypt/src/main/res/layout/activity_contacts_settings.xml
@@ -4,6 +4,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -21,11 +22,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
-        <ListView
-            android:id="@+id/listViewContacts"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/listViewContacts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/floatActionButtonImportPublicKey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@mipmap/ic_white_plus"
+                app:backgroundTint="@color/colorPrimary" />
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/emptyView"
@@ -35,4 +51,5 @@
             android:text="@string/no_results"
             android:visibility="gone" />
     </FrameLayout>
+
 </LinearLayout>
