--- a/FlowCrypt/src/main/res/layout/activity_import_public_key_for_pgp_contact.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_public_key_for_pgp_contact.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textViewImportKeyTitle"
+            android:id="@+id/textViewTitle"
             style="@style/ScreenHeading"
             android:text="@string/import_private_key"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
             app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/textViewImportKeyTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
         <Button
             android:id="@+id/buttonLoadFromClipboard"
@@ -85,7 +85,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="@dimen/default_margin_very_big"
-            android:text="@string/checking_the_private_key"
+            android:text="@string/evaluating"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progressBar" />
