Added a base logic for AddContactActivity. Refactored code.| #239

--- a/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
@@ -11,22 +11,50 @@
 
     <include layout="@layout/toolbar" />
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/layoutContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true">
+        android:layout_weight="1">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/layoutContent"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layoutProgress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="@dimen/default_margin_very_big"
+                android:text="@string/evaluating"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <ScrollView
+            android:id="@+id/layoutContentView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/layoutContentView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/textViewTitle"
@@ -100,37 +128,22 @@
                     app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
 
             </android.support.constraint.ConstraintLayout>
+        </ScrollView>
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/layoutProgress"
+        <LinearLayout
+            android:id="@+id/layoutPublicKeysContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewContacts"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone">
+                android:scrollbars="vertical" />
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    android:layout_marginTop="@dimen/default_margin_very_big"
-                    android:text="@string/evaluating"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />
-
-            </android.support.constraint.ConstraintLayout>
-        </FrameLayout>
-    </ScrollView>
+    </FrameLayout>
 
 </LinearLayout>
