--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -22,6 +22,8 @@
     <item name="loader_id_load_email_aliases" type="id" />
     <item name="loader_id_load_keys_info_from_attester" type="id" />
     <item name="loader_id_create_private_key" type="id" />
+    <item name="loader_id_search_public_key" type="id" />
+    <item name="loader_id_parse_public_keys" type="id" />
 
     <item name="syns_request_code_update_label_passive" type="id" />
     <item name="syns_request_code_update_label_active" type="id" />
