--- a/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_public_keys.xml
@@ -5,6 +5,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -130,19 +131,38 @@
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/layoutPublicKeysContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone">
 
+            <TextView
+                android:id="@+id/textViewFoundContactsCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/default_margin_content_small"
+                android:layout_marginStart="@dimen/default_margin_content_small"
+                android:layout_marginTop="@dimen/default_margin_content_small"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Found 12 contacts" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerViewContacts"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical" />
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/default_margin_content_small"
+                android:layout_marginTop="@dimen/default_margin_content_small"
+                android:scrollbars="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewFoundContactsCount"
+                tools:listitem="@layout/import_pgp_contact_item" />
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </FrameLayout>
 
