--- a/FlowCrypt/src/main/res/layout/import_pgp_contact_item.xml
+++ b/FlowCrypt/src/main/res/layout/import_pgp_contact_item.xml
@@ -35,6 +35,15 @@
         android:textIsSelectable="true"
         tools:text="Fingerprint: XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX XXXX" />
 
+    <TextView
+        android:id="@+id/textViewAlreadyImported"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:gravity="center|end"
+        android:text="@string/already_imported"
+        android:textColor="@color/colorPrimary" />
+
     <Button
         android:id="@+id/buttonSaveContact"
         style="@style/AppWidget.Button"
