--- a/FlowCrypt/src/main/res/menu/activity_import_public_keys.xml
+++ b/FlowCrypt/src/main/res/menu/activity_import_public_keys.xml
@@ -6,7 +6,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.flowcrypt.email.ui.activity.AddContactActivity">
+    tools:context="com.flowcrypt.email.ui.activity.ImportPgpContactActivity">
     <item
         android:id="@+id/menuActionHelp"
         android:icon="@mipmap/ic_help"
