--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -77,4 +77,5 @@
     <dimen name="drop_down_vertical_offset_spinner_from">56dp</dimen>
     <dimen name="drop_down_size">32dp</dimen>
     <dimen name="padding_recipients_to">48dp</dimen>
+    <dimen name="layout_width_encrypted_indicator">8dp</dimen>
 </resources>
