Removed a space from the encrypting indicator| #215

--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -17,6 +17,7 @@
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
