Added CheckIsLoadedMessagesEncryptedSyncTask. Used a passive queue for identification encrypted messages.| #215

--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -38,6 +38,7 @@
     <item name="syns_get_active_account" type="id" />
     <item name="syns_load_private_keys" type="id" />
     <item name="syns_send_backup_with_private_key_to_key_owner" type="id" />
+    <item name="syns_identify_encrypted_messages" type="id" />
 
     <item name="js_decrypt_message" type="id" />
     <item name="js_refresh_storage_connector" type="id" />
