--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -134,4 +134,12 @@
     <style name="AppWidget.TextInputLayout.PgpBlock.Other">
         <item name="android:background">@drawable/bg_message_part_other</item>
     </style>
+
+    <style name="AppWidget.ProgressBar" />
+
+    <style name="AppWidget.ProgressBar.Linear" />
+
+    <style name="AppWidget.ProgressBar.Linear.Green" parent="AppTheme">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
 </resources>
