--- a/FlowCrypt/src/main/res/layout/fragment_preview_import_pgp_contact.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_preview_import_pgp_contact.xml
@@ -17,14 +17,14 @@
         android:visibility="visible">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewProgressTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/parse_public_keys"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/parsing_public_keys" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -39,7 +39,7 @@
             android:theme="@style/AppWidget.ProgressBar.Linear.Green"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProgressTitle" />
 
     </android.support.constraint.ConstraintLayout>
 
