Added a switch to show only encrypted messages.| Close #236

--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -142,4 +142,8 @@
     <style name="AppWidget.ProgressBar.Linear.Green" parent="AppTheme">
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
+
+    <style name="AppWidget.Switch" parent="AppTheme">
+        <item name="colorAccent">@color/colorPrimaryLight</item>
+    </style>
 </resources>
